<resources>
    <string name="app_name">LoginModule</string>
    <string name="login">LOGIN</string>
    <string name="enter_phone_number">Enter Phone Number</string>
    <string name="enter_password">Enter Password</string>
    <string name="remember_me">Remember Me</string>
    <string name="forget_password">FORGOT PASSWORD</string>
    <string name="create_account">Create\nAccount</string>

    <string name="enter_full_name">Full Name</string>
    <string name="enter_username">Username</string>
    <string name="next_btn">NEXT</string>

    <string name="code">Co\nde</string>
    <string name="verification">Verification</string>
    <string name="description">Enter onetime password sent on\n+91 9328296349</string>


</resources>