<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:padding="30dp"
    android:transitionName="transition_signup"
    tools:context=".SignUp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp">


            <TextView
                android:id="@+id/signup_title_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/create_account"
                android:textAllCaps="true"
                android:textColor="@color/Text"
                android:textSize="40sp"
                android:transitionName="transition_title_text" />


            <TextView
                android:id="@+id/signup_slide_text"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginTop="20dp"
                android:background="@drawable/circle_black_border"
                android:gravity="center"
                android:padding="10dp"
                android:fontFamily="@font/ds_digital_bold"
                android:text="1/3"
                android:textAlignment="center"
                android:textColor="@color/Text"
                android:textSize="30sp"
                android:transitionName="transition_slide_text" />


        </RelativeLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:orientation="vertical">


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/signup_fullname"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_full_name"
                android:textColorHint="@color/Text"
                app:boxStrokeColor="@color/Text"
                app:boxStrokeWidthFocused="2dp"
                app:endIconMode="clear_text"
                app:endIconTint="@color/Text"
                app:hintTextColor="@color/Text"
                app:startIconDrawable="@drawable/field_full_name_icon"
                app:startIconTint="@color/Text">


                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="text"
                    android:textColor="@color/Text"
                    android:textCursorDrawable="@null"
                    android:paddingStart="50dp"/>


            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/signup_username"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_username"
                android:textColorHint="@color/Text"
                app:boxStrokeColor="@color/placeholder"
                app:boxStrokeWidthFocused="2dp"
                app:endIconMode="clear_text"
                app:endIconTint="@color/Text"
                app:hintTextColor="@color/Text"
                app:startIconDrawable="@drawable/field_username_icon"
                app:startIconTint="@color/Text">


                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="text"
                    android:textColor="@color/Text"
                    android:textCursorDrawable="@null"
                    android:paddingStart="50dp"/>


            </com.google.android.material.textfield.TextInputLayout>


        </LinearLayout>


        <Button
            android:id="@+id/signup_next_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:background="@color/Buttons"
            android:elevation="5dp"
            android:onClick="callNextSigupScreen"
            android:text="@string/next_btn"
            android:textColor="@color/Text"
            android:transitionName="transition_next_btn" />


        <Button
            android:id="@+id/signup_login_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@color/background"
            android:elevation="5dp"
            android:onClick="callLoginFromSignUp"
            android:text="@string/login"
            android:textColor="@color/Text"
            android:transitionName="transition_login_btn" />


    </LinearLayout>


</ScrollView>