<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:padding="30dp"
    tools:context=".SignUp2">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp">


            <TextView
                android:id="@+id/signup_title_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/create_account"
                android:textAllCaps="true"
                android:textColor="@color/Text"
                android:layout_centerVertical="true"
                android:textSize="40sp"
                android:transitionName="transition_title_text" />


            <TextView
                android:id="@+id/signup_slide_text"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/ds_digital_bold"
                android:text="2/3"
                android:layout_alignParentRight="true"
                android:textColor="@color/Text"
                android:textAlignment="center"
                android:textSize="30sp"
                android:padding="10dp"
                android:layout_centerVertical="true"
                android:background="@drawable/circle_black_border"
                android:transitionName="transition_slide_text"
                android:gravity="center" />


        </RelativeLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:orientation="vertical">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Choose Gender"
                android:textColor="@color/Text"
                android:textSize="18sp" />


            <RadioGroup
                android:id="@+id/radio_group"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">


                <RadioButton
                    android:id="@+id/male"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/Text"
                    android:text="Male"
                    android:buttonTint="@color/Text"/>


                <RadioButton
                    android:id="@+id/female"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:textColor="@color/Text"
                    android:text="Female"
                    android:buttonTint="@color/Text"/>


                <RadioButton
                    android:id="@+id/others"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:textColor="@color/Text"
                    android:text="Other"
                    android:buttonTint="@color/Text"/>

            </RadioGroup>


            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:background="@color/Text" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Select Your Age"
                android:textColor="@color/Text"
                android:textSize="18sp" />


            <DatePicker
                android:id="@+id/age_picker"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:calendarViewShown="false"
                android:datePickerMode="spinner"
                android:textColor="@color/Text"
                android:spinnersShown="true"
                android:theme="@style/CustomDatePickerTheme"/>


        </LinearLayout>



        <Button
            android:id="@+id/signup_next_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@color/Buttons"
            android:elevation="5dp"
            android:onClick="call3rdSigupScreen"
            android:text="@string/next_btn"
            android:textColor="@color/button_text"
            android:transitionName="transition_next_btn" />


        <Button
            android:id="@+id/signup_login_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@color/background"
            android:elevation="5dp"
            android:text="@string/login"
            android:textColor="@color/Text"
            android:transitionName="transition_login_btn" />


    </LinearLayout>


</ScrollView>