<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fbe4db">

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp">

        <!-- Close Icon -->
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="goToHomeFromOTP"
            android:padding="5dp"
            android:src="@drawable/general_close_icon"
            android:contentDescription="Close OTP Screen" />

        <!-- OTP Title -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/mulishblack"
            android:includeFontPadding="false"
            android:text="@string/code"
            android:textStyle="bold"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="#470000"
            android:textSize="100sp" />

        <!-- OTP Verification Subtitle -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/mulishextrabold"
            android:textStyle="bold"
            android:includeFontPadding="false"
            android:text="@string/verification"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="#470000"
            android:textSize="24sp" />

        <!-- OTP Description -->
        <TextView
            android:id="@+id/otp_description_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            android:fontFamily="@font/mulishbold"
            android:includeFontPadding="false"
            android:text="@string/description"
            android:textAlignment="center"
            android:textColor="#470000"
            android:textSize="16sp" />

        <!-- OTP Entry Boxes -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginTop="10dp">

            <EditText
                android:id="@+id/otp1"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:maxLength="1"
                android:inputType="number"
                android:gravity="center"
                android:background="@drawable/otp_box"
                android:textCursorDrawable="@drawable/cursor_color"
                android:textSize="18sp"
                android:textColor="#470000"
                android:layout_margin="2dp"/>

            <EditText
                android:id="@+id/otp2"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:maxLength="1"
                android:inputType="number"
                android:gravity="center"
                android:background="@drawable/otp_box"
                android:textCursorDrawable="@drawable/cursor_color"
                android:textSize="18sp"
                android:textColor="#470000"
                android:layout_margin="2dp"/>

            <EditText
                android:id="@+id/otp3"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:maxLength="1"
                android:inputType="number"
                android:gravity="center"
                android:background="@drawable/otp_box"
                android:textCursorDrawable="@drawable/cursor_color"
                android:textSize="18sp"
                android:textColor="#470000"
                android:layout_margin="2dp"/>

            <EditText
                android:id="@+id/otp4"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:maxLength="1"
                android:inputType="number"
                android:gravity="center"
                android:background="@drawable/otp_box"
                android:textCursorDrawable="@drawable/cursor_color"
                android:textSize="18sp"
                android:textColor="#470000"
                android:layout_margin="2dp"/>

            <EditText
                android:id="@+id/otp5"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:maxLength="1"
                android:inputType="number"
                android:gravity="center"
                android:background="@drawable/otp_box"
                android:textCursorDrawable="@drawable/cursor_color"
                android:textSize="18sp"
                android:textColor="#470000"
                android:layout_margin="2dp"/>

            <EditText
                android:id="@+id/otp6"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:maxLength="1"
                android:inputType="number"
                android:gravity="center"
                android:background="@drawable/otp_box"
                android:textCursorDrawable="@drawable/cursor_color"
                android:textSize="18sp"
                android:textColor="#470000"
                android:layout_margin="2dp"/>
        </LinearLayout>

        <!-- Verify OTP Button -->
        <Button
            android:id="@+id/btn_verify_otp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:textColor="#470000"
            android:backgroundTint="#DFB6B2"
            android:text="Verify"
            android:onClick="callNextScreenFromOTP"
            android:transitionName="transition_OTP_screen" />

    </LinearLayout>
</ScrollView>